# seu

./: CMakeLists.txt  README.md
.cache/clangd/index/: allocator.h.71968062D6F456B1.idx  config.h.FB667E374E761D8A.idx  csvdata.h.63B4E4E15E7E26DC.idx  fine_grained.h.94977F33EBCDC9BE.idx  floorplan.cc.3E056931E1D3C8CA.idx  floorplan.h.4EC7CBB7D176F74D.idx  forwards.h.B4A5EADC0BB671ED.idx  fpga.h.52250999E74CC424.idx  generate_xdc.h.9798F5AB9A5D0F55.idx  json.h.F557446EE504ED8D.idx  json_features.h.110086EB0EABF01B.idx  kmeanspp.cc.3EECF0B246C47BD6.idx  kmeanspp.h.8441542F1A610A6C.idx  marco.h.25C4400B1D0D772F.idx  milp_model_pynq_with_partition.cc.FB604D38BA6B894E.idx  milp_solver_interface.h.58F10A0803A461DC.idx  partition.h.B4F23F5E83F6A35E.idx  pynq.cc.29F70A7CA7A9BEC6.idx  pynq.h.77C617A22BEEB662.idx  pynq_fine_grained.cc.1AF29D807B3CB840.idx  pynq_fine_grained.h.505ED088E179DFFB.idx  pynq_var.h.ACCBA2959E087872.idx  reader.h.38A964A389B1F2D5.idx  task.cc.6FB35BD7878EE9C6.idx  task.h.EE221E395FF0FECE.idx  task_manager.cc.AC8BE79EF4446FE6.idx  task_manager.h.FA97167735A744BC.idx  test_kmeans++.cc.AAC1D11782A53720.idx  utils.cc.5DCC34B906863B03.idx  utils.h.9C835172C747487A.idx  value.h.AFAA6F3CA757C802.idx  version.h.0A9750F88CDB4967.idx  writer.h.71FE45F9C27BA501.idx
build_support/cmake/: FindGurobi.cmake
python/: random_task_gen.py  random_tasks.json
src/: CMakeLists.txt  csvdata.cc  floorplan.cc  task.cc  task_init.cc  task_manager.cc  task_random_init.cc  utils.cc
src/include/: csvdata.h  fine_grained.h  fpga.h  generate_xdc.h  marco.h  milp_solver_interface.h  partition.h  task.h  task_init.h  task_manager.h  task_random_init.h  utils.h
src/include/pynq/: pynq.h  pynq_fine_grained.h  pynq_var.h
src/include/solver/: floorplan.h  gen_wrapper.h  kmeanspp.h  pr_tool.h  version.h
src/info/taskinfo/: test.json
src/pynq/: CMakeLists.txt  milp_model_pynq.cc  milp_model_pynq_with_partition.cc  pynq.cc  pynq_fine_grained.cc
src/solver/: CMakeLists.txt  floorplan.cc  kmeanspp.cc  pr_tool.cc
test/: CMakeLists.txt  test_kmeans++.cc
